# CUTEst

./: .cirrus.yml  .travis.yml  LICENSE  README.md  README.osx  install_cutest  meson.build  meson_options.txt  uninstall_cutest  update_cutest  version
.github/julia/: build_tarballs.jl  build_tarballs_yggdrasil.jl  generate_binaries.jl
.github/workflows/: build-cross-compiler.yml  ci.yml  meson.yml  release.yml
doc/: README  README.C  README.cuter_vs_cutest  README.osx  README.python  README.thanks
doc/matlab-osx/: clang_maci64.xml
include/: cg_user.h  cutest.h  cutest_c.h  cutest_modules.h  cutest_routines.h  cutest_routines_double.h  cutest_routines_quadruple.h  cutest_routines_single.h  knitro.h  loqo.h  loqo_alloc.h  meson.build
include/osqp/: auxil.h  glob_opts.h  osqp.h  types.h  util.h
include/worhp/: C_Worhp_Data.h  C_Worhp_Members.h  C_ccm.h  C_cs.h  C_filter_data.h  C_leqsol_data.h  C_qp_data.h  C_std.h  C_timer.h  C_worhp_aux.h  C_worhp_io.h  C_worhp_queue.h  C_worhp_setup.h  monitor_module.h  monitor_structure.h  worhp.h  worhp_config.h  worhp_macros.h  worhp_monitor.h  worhp_version.h
makefiles/: binarybuilder.bb.fc  mac64.osx.ifr  pc64.lnx.gfo
man/man1/: cutest2matlab.1  cutest2octave.1  makedocs  runcutest.1
man/man3/: cgdma.3  cgpma.3  cobma.3  cutest.3  cutest_ccf.3  cutest_ccf_threaded.3  cutest_ccfg.3  cutest_ccfg_threaded.3  cutest_ccfsg.3  cutest_ccfsg_threaded.3  cutest_cchprods.3  cutest_cchprods_threaded.3  cutest_cchprodsp.3  cutest_ccifg.3  cutest_ccifg_threaded.3  cutest_ccifsg.3  cutest_ccifsg_threaded.3  cutest_cdh.3  cutest_cdh_threaded.3  cutest_cdhc.3  cutest_cdhc_threaded.3  cutest_cdhj.3  cutest_cdhj_threaded.3  cutest_cdimchp.3  cutest_cdimen.3  cutest_cdimohp.3  cutest_cdimscj.3  cutest_cdimse.3  cutest_cdimsg.3  cutest_cdimsh.3  cutest_cdimsj.3  cutest_ceh.3  cutest_ceh_threaded.3  cutest_cfn.3  cutest_cfn_threaded.3  cutest_cgr.3  cutest_cgr_threaded.3  cutest_cgrdh.3  cutest_cgrdh_threaded.3  cutest_chcprod.3  (+127 more)
seds/: double.sed  single.sed
sif/: ALLINITC.SIF  CLASSF.DB  CONT6-QQ.SIF  GAUSSELM.SIF  HS11.SIF  HS21.SIF  HS3.SIF  JANNSON3.SIF  JANNSON4.SIF  KISSING2.SIF  LUBRIFC.SIF  ROSENBR.SIF  ROSENMMX.SIF  parametrizable  sifcmd.lst
src/: cuter_2_cutest  cutest2  makemaster
src/algencan/: README_algencan  algencan_main.F  algencan_main.f  algencan_test.F  algencan_test.f  c_test.output  cutest.com  dim.par  hessdat.com  makemaster  meson.build
src/bobyqa/: BOBYQA.SPC  README.bobyqa  bobyqa_main.F90  bobyqa_main.f90  bobyqa_test.F90  bobyqa_test.f90  makemaster  meson.build
src/cg_descent/: CG_DESCENT.SPC  CG_DESCENT_FORTRAN.SPC  README.cg_descent  cg_descent_main.F  cg_descent_main.c  cg_descent_main.f  cg_descent_test.F  cg_descent_test.c  cg_descent_test.f  makemaster  meson.build
src/cgplus/: CGPLUS.SPC  README.cgplus  cgplus_main.F  cgplus_main.f  cgplus_test.F  cgplus_test.f  makemaster  meson.build
src/cobyla/: COBYLA.SPC  README.cobyla  cobyla77_main.f  cobyla_main.F90  cobyla_main.f90  cobyla_test.F90  cobyla_test.f90  makemaster  meson.build
src/curvi/: CURVI.SPC  README_curvi  curvi_main.F90  curvi_main.f90  curvi_test.F90  curvi_test.f90  makemaster  meson.build  u_test.output
src/derchk/: derchk_main.c  makemaster  meson.build
src/dfo/: DFO.SPC  README.dfo  dfo_main.F90  dfo_main.f90  dfo_test.F90  dfo_test.f90  makemaster  meson.build
src/directsearch/: DIRECTSEARCH.SPC  README.directsearch  directsearch_main.F90  directsearch_main.f90  directsearch_test.F90  directsearch_test.f90  makemaster  meson.build  u_test.output
src/e04nqf/: E04NQF.SPC  README.e04nqf  e04nqf_main.F90  e04nqf_main.f90  e04nqf_test.F90  makemaster  meson.build
src/filtersd/: FILTERSD.SPC  README.filtersd  filtersd_main.F  filtersd_main.f  filtersd_test.F  filtersd_test.f  makemaster  meson.build
src/filtersqp/: README.filtersqp  filtersqp_main.F  filtersqp_main.f  filtersqp_test.F  filtersqp_test.f  makemaster  meson.build  spec.par
src/gen77/: gen77.F  gen77.f  gen77_main.F  gen77_main.f  makemaster  meson.build
src/gen90/: gen90.F90  gen90.f90  gen90_main.F90  gen90_main.f90  makemaster  meson.build
src/genc/: genc.C  genc.c  genc_main.c  makemaster  meson.build
src/gsl/: GSL.SPC  README.gsl  gsl_main.c  makemaster  meson.build
src/highs/: HiGHS.SPC  README.highs  highs_main.F90  highs_main.f90  highs_test.F90  highs_test.f90  makemaster  meson.build
src/hrb/: c_test.input  hrb_main.F90  hrb_main.f90  makemaster  meson.build
src/ipopt/: README.ipopt  ipopt_main.F  ipopt_main.f  ipopt_test.F  ipopt_test.f  makemaster  meson.build
src/knitro/: README.knitro  knitro.opt  knitro_main.c  makemaster  meson.build
src/la04/: LA04.SPC  README.la04  la04_main.F  la04_main.f  la04_test.F  la04_test.f  makemaster  meson.build
src/lbfgs/: LBFGS.SPC  README.lbfgs  lbfgs_main.F  lbfgs_main.f  lbfgs_test.F  lbfgs_test.f  makemaster  meson.build
src/lbfgsb/: LBFGSB.SPC  README.lbfgsb  lbfgsb_main.F  lbfgsb_main.f  (+4 more)
src/test/: ALLINITC.SIF  ALLINITU.SIF  c_OUTSDIF.d  c_elfun_double.f  c_elfun_quadruple.f  c_elfun_single.f  c_group_double.f  c_group_quadruple.f  c_group_single.f  c_range.f  c_range_quadruple.f  c_range_single.f  ccutertest.f90  ctest.F90  ctest.c  ctest.f90  ctest2.F90  ctest_c.c  ctest_threaded.F90  ctest_threaded.f90  lqptest.F90  lqptest.f90  makemaster  meson.build  q_OUTSDIF.d  q_elfun_double.f  q_elfun_quadruple.f  q_elfun_single.f  q_group.f  q_group_quadruple.f  q_group_single.f  q_range.f  q_range_quadruple.f  q_range_single.f  test_main.F90  test_main.f90  u_OUTSDIF.d  u_elfun.f  u_elfun_quadruple.f  u_elfun_single.f  (+13 more)
src/tools/: ccf.F90  ccfg.F90  ccfg.f90  ccfsg.F90  ccfsg.f90  cchprods.F90  cchprods.f90  cchprodsp.F90  cchprodsp.f90  ccifg.F90  ccifg.f90  ccifsg.F90  ccifsg.f90  cconst.F90  cconst.f90  ccutest.c  cdh.F90  cdh.f90  cdhc.F90  cdhc.f90  cdhj.F90  cdimchp.F90  cdimchp.f90  cdimen.F90  cdimen.f90  cdimohp.F90  cdimohp.f90  cdimscj.F90  cdimse.F90  cdimse.f90  cdimsg.F90  cdimsg.f90  cdimsh.F90  cdimsh.f90  cdimsj.F90  cdimsj.f90  ceh.F90  ceh.f90  cfn.F90  cfn.f90  (+149 more)
(+278 files in other folders)
