option('modules',
       type : 'boolean',
       value : true,
       description : 'option to install Fortran modules')

option('quadruple',
       type : 'boolean',
       value : false,
       description : 'option to compile CUTEst with quadruple precision')

option('int64',
       type : 'boolean',
       value : false,
       description : 'option to compile CUTEst with 64-bit integer')

option('tests',
       type : 'boolean',
       value : false,
       description : 'whether to generate the tests')
