cutest_headers += files('cutest.h',
                        'cutest_c.h',
                        'cutest_modules.h',
                        'cutest_routines.h',
                        'cutest_routines_single.h',
                        'cutest_routines_double.h',
                        'cutest_routines_quadruple.h')
