libcutest_src += files('ccfg.f90')
libcutest_src += files('ccfsg.f90')
libcutest_src += files('cchprods.f90')
libcutest_src += files('cchprodsp.f90')
libcutest_src += files('ccifg.f90')
libcutest_src += files('ccifsg.f90')
libcutest_src += files('cconst.f90')
libcutest_src += files('ccutest.c')
libcutest_src += files('cdh.f90')
libcutest_src += files('cdhc.f90')
libcutest_src += files('cdimchp.f90')
libcutest_src += files('cdimen.f90')
libcutest_src += files('cdimse.f90')
libcutest_src += files('cdimsh.f90')
libcutest_src += files('cdimsj.f90')
libcutest_src += files('ceh.f90')
libcutest_src += files('cfn.f90')
libcutest_src += files('cgr.f90')
libcutest_src += files('cgrdh.f90')
libcutest_src += files('chcprod.f90')
libcutest_src += files('chprod.f90')
libcutest_src += files('cidh.f90')
libcutest_src += files('cifn.f90')
libcutest_src += files('cigr.f90')
libcutest_src += files('cisgr.f90')
libcutest_src += files('cisgrp.f90')
libcutest_src += files('cish.f90')
libcutest_src += files('cjprod.f90')
libcutest_src += files('clfg.f90')
libcutest_src += files('cnames.f90')
libcutest_src += files('cofg.f90')
libcutest_src += files('cofsg.f90')
libcutest_src += files('connames.f90')
libcutest_src += files('creport.f90')
libcutest_src += files('csetup.f90')
libcutest_src += files('csgr.f90')
libcutest_src += files('csgreh.f90')
libcutest_src += files('csgrp.f90')
libcutest_src += files('csgrsh.f90')
libcutest_src += files('csgrshp.f90')
libcutest_src += files('csh.f90')
libcutest_src += files('cshc.f90')
libcutest_src += files('cshcprod.f90')
libcutest_src += files('cshj.f90')
libcutest_src += files('cshp.f90')
libcutest_src += files('cshprod.f90')
libcutest_src += files('csjp.f90')
libcutest_src += files('csjprod.f90')
libcutest_src += files('cstats.f90')
libcutest_src += files('cterminate.f90')
libcutest_src += files('cutest.f90')
libcutest_src += files('cvartype.f90')
libcutest_src += files('fortran_ops.f90')
libcutest_src += files('interface.f90')
libcutest_src += files('lqp.f90')
libcutest_src += files('newthread.f90')
libcutest_src += files('pname.f90')
libcutest_src += files('problem.f90')
libcutest_src += files('probname.f90')
libcutest_src += files('readin.f90')
libcutest_src += files('timings.f90')
libcutest_src += files('ubandh.f90')
libcutest_src += files('udh.f90')
libcutest_src += files('udimen.f90')
libcutest_src += files('udimse.f90')
libcutest_src += files('udimsh.f90')
libcutest_src += files('ueh.f90')
libcutest_src += files('ufn.f90')
libcutest_src += files('ugr.f90')
libcutest_src += files('ugrdh.f90')
libcutest_src += files('ugreh.f90')
libcutest_src += files('ugrsh.f90')
libcutest_src += files('uhprod.f90')
libcutest_src += files('unames.f90')
libcutest_src += files('uofg.f90')
libcutest_src += files('ureport.f90')
libcutest_src += files('usetup.f90')
libcutest_src += files('ush.f90')
libcutest_src += files('ushp.f90')
libcutest_src += files('ushprod.f90')
libcutest_src += files('uterminate.f90')
libcutest_src += files('uvartype.f90')
libcutest_src += files('varnames.f90')
