libcutest_src += files('ccfg.F90')
libcutest_src += files('ccfsg.F90')
libcutest_src += files('cchprods.F90')
libcutest_src += files('cchprodsp.F90')
libcutest_src += files('ccifg.F90')
libcutest_src += files('ccifsg.F90')
libcutest_src += files('cconst.F90')
libcutest_c_src += files('ccutest.c')
libcutest_src += files('cdh.F90')
libcutest_src += files('cdhc.F90')
libcutest_src += files('cdhj.F90')
libcutest_src += files('cdimchp.F90')
libcutest_src += files('cdimen.F90')
libcutest_src += files('cdimohp.F90')
libcutest_src += files('cdimse.F90')
libcutest_src += files('cdimsg.F90')
libcutest_src += files('cdimsh.F90')
libcutest_src += files('cdimsj.F90')
libcutest_src += files('ceh.F90')
libcutest_src += files('cfn.F90')
libcutest_src += files('cgr.F90')
libcutest_src += files('cgrdh.F90')
libcutest_src += files('chcprod.F90')
libcutest_src += files('chjprod.F90')
libcutest_src += files('chprod.F90')
libcutest_src += files('cidh.F90')
libcutest_src += files('cifn.F90')
libcutest_src += files('cigr.F90')
libcutest_src += files('cisgr.F90')
libcutest_src += files('cisgrp.F90')
libcutest_src += files('cish.F90')
libcutest_src += files('cjprod.F90')
libcutest_src += files('clfg.F90')
libcutest_src += files('cnames.F90')
libcutest_src += files('cnoobj.F90')
libcutest_src += files('cofg.F90')
libcutest_src += files('cofsg.F90')
libcutest_src += files('cohprods.F90')
libcutest_src += files('cohprodsp.F90')
libcutest_src += files('connames.F90')
libcutest_src += files('creport.F90')
libcutest_src += files('csetup.F90')
libcutest_src += files('csgr.F90')
libcutest_src += files('csgreh.F90')
libcutest_src += files('csgrp.F90')
libcutest_src += files('csgrsh.F90')
libcutest_src += files('csgrshp.F90')
libcutest_src += files('csh.F90')
libcutest_src += files('cshc.F90')
libcutest_src += files('cshcprod.F90')
libcutest_src += files('cshj.F90')
libcutest_src += files('cshp.F90')
libcutest_src += files('cshprod.F90')
libcutest_src += files('csjp.F90')
libcutest_src += files('csjprod.F90')
libcutest_src += files('cstats.F90')
libcutest_src += files('cterminate.F90')
libcutest_src += files('cutest.F90')
libcutest_src += files('cvartype.F90')
libcutest_src += files('fortran_ops.F90')
libcutest_src += files('interface.F90')
libcutest_src += files('kinds.F90')
libcutest_src += files('lqp.F90')
libcutest_src += files('newthread.F90')
libcutest_src += files('pname.F90')
libcutest_src += files('problem.F90')
libcutest_src += files('probname.F90')
libcutest_src += files('readin.F90')
libcutest_src += files('timings.F90')
libcutest_src += files('ubandh.F90')
libcutest_src += files('udh.F90')
libcutest_src += files('udimen.F90')
libcutest_src += files('udimse.F90')
libcutest_src += files('udimsh.F90')
libcutest_src += files('ueh.F90')
libcutest_src += files('ufn.F90')
libcutest_src += files('ugr.F90')
libcutest_src += files('ugrdh.F90')
libcutest_src += files('ugreh.F90')
libcutest_src += files('ugrsh.F90')
libcutest_src += files('uhprod.F90')
libcutest_src += files('unames.F90')
libcutest_src += files('uofg.F90')
libcutest_src += files('ureport.F90')
libcutest_src += files('usetup.F90')
libcutest_src += files('ush.F90')
libcutest_src += files('ushp.F90')
libcutest_src += files('ushprod.F90')
libcutest_src += files('uterminate.F90')
libcutest_src += files('uvartype.F90')
libcutest_src += files('varnames.F90')

# libcutest_delegate_src += files('cutest_delegate.f90')
# libcutest_src += files('cutest_delegate.f90')
