libcutest_c_src += files('ccutest.c')

libcutest_src += files('ccf.F90',
                       'ccfg.F90',
                       'ccfsg.F90',
                       'cchprods.F90',
                       'cchprodsp.F90',
                       'ccifg.F90',
                       'ccifsg.F90',
                       'cconst.F90',
                       'cdh.F90',
                       'cdhc.F90',
                       'cdhj.F90',
                       'cdimchp.F90',
                       'cdimen.F90',
                       'cdimohp.F90',
                       'cdimse.F90',
                       'cdimsg.F90',
                       'cdimsh.F90',
                       'cdimsj.F90',
                       'ceh.F90',
                       'cfn.F90',
                       'cgr.F90',
                       'cgrdh.F90',
                       'chcprod.F90',
                       'chjprod.F90',
                       'chprod.F90',
                       'cidh.F90',
                       'cifn.F90',
                       'cigr.F90',
                       'cisgr.F90',
                       'cisgrp.F90',
                       'cish.F90',
                       'cjprod.F90',
                       'clfg.F90',
                       'cnames.F90',
                       'cnoobj.F90',
                       'cofg.F90',
                       'cofsg.F90',
                       'cohprods.F90',
                       'cohprodsp.F90',
                       'connames.F90',
                       'creport.F90',
                       'csetup.F90',
                       'csgr.F90',
                       'csgreh.F90',
                       'csgrp.F90',
                       'csgrsh.F90',
                       'csgrshp.F90',
                       'csh.F90',
                       'cshc.F90',
                       'cshcprod.F90',
                       'cshj.F90',
                       'cshp.F90',
                       'cshprod.F90',
                       'csjp.F90',
                       'csjprod.F90',
                       'cstats.F90',
                       'cterminate.F90',
                       'cutest.F90',
                       'cvartype.F90',
                       'fortran_ops.F90',
                       'interface.F90',
                       'kinds.F90',
                       'lqp.F90',
                       'newthread.F90',
                       'pname.F90',
                       'classification.F90',
                       'problem.F90',
                       'probname.F90',
                       'readin.F90',
                       'timings.F90',
                       'ubandh.F90',
                       'udh.F90',
                       'udimen.F90',
                       'udimse.F90',
                       'udimsh.F90',
                       'ueh.F90',
                       'ufn.F90',
                       'ugr.F90',
                       'ugrdh.F90',
                       'ugreh.F90',
                       'ugrsh.F90',
                       'uhprod.F90',
                       'unames.F90',
                       'uofg.F90',
                       'ureport.F90',
                       'usetup.F90',
                       'ush.F90',
                       'ushp.F90',
                       'ushprod.F90',
                       'uterminate.F90',
                       'uvartype.F90',
                       'varnames.F90')

if get_option('default_library') == 'shared'
    libcutest_src += files('cutest_delegate.f90')
endif
